--- a/views/episodes/show.ejs
+++ b/views/episodes/show.ejs
@@ -5,7 +5,7 @@
     <body>
         <%- include('../partials/navbar/_navbar') %>
         <main>
-            <div class="show-page-container">
+            <div class="ep-show-page-container">
                 <div class="show-page-container-left">
                     <a href="/shows/<%=episode.parentShow._id%>" class="show-page-header-link">
                         <h1><%=episode.parentShow.name%></h1>
