--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -208,4 +208,63 @@ main {
   text-decoration: underline;
 }
 
+#account-box {
+  width: 40%;
+  margin: 50px auto;
+  padding: 60px 50px;
+  background-color: white;
+}
+#account-box h3 {
+  padding: 0 0 10px 0;
+  margin: 0;
+  font-family: "Nanum Gothic", sans-serif;
+}
+#account-box label {
+  color: #004e89;
+}
+#account-box input {
+  width: 100%;
+  height: 20px;
+  border: none;
+  border-bottom: #999999 2px solid;
+  padding-top: 10px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+}
+#account-box input[type=date] {
+  font-family: "Montserrat", sans-serif;
+}
+#account-box .form-section {
+  padding: 20px 0;
+}
+#account-box .button-container {
+  margin: auto;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+#account-box button {
+  border: none;
+  background-color: #d4ece5;
+  color: #004e89;
+  padding: 10px 15px;
+  border-radius: 20px;
+  text-transform: uppercase;
+  padding: 10px 30px;
+  align-items: center;
+}
+#account-box button:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
+#account-box .register-login-redirect {
+  margin-top: 30px;
+}
+#account-box a {
+  color: #2f73a7;
+}
+#account-box a:hover {
+  text-decoration: none;
+}
+
 /*# sourceMappingURL=main.css.map */
