--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -3,13 +3,18 @@
 <%- include('../partials/head/_head', { page: 'Login' }) %>
 
     <body>
+
+        <nav id="navbar">
+            <div id="logo">quelue</div>
+        </nav>
+        
         <main>
-            <div id="login-box">
+            <div id="account-box">
                 <h3>Watch your favorite TV shows</h3>
                 <h3>Login to start the quelue!</h3>
-                <div class="login-form">
+                <div class="account-form">
                     <form action="/login" method="POST">
-                        <div>
+                        <div class="form-section">
                             <label for="username">username</label>
                             <div class="input-field">
                                 <input 
@@ -19,7 +24,7 @@
                                 />
                             </div>
                         </div>
-                        <div>
+                        <div class="form-section">
                             <label for="username">password</label>
                             <div class="input-field">
                                 <input 
@@ -29,13 +34,13 @@
                                 />
                             </div>
                         </div>
-                        <div>
+                        <div class="button-container">
                             <button>Submit</button>
                         </div>
                     </form>
                 </div>
 
-                <div>
+                <div class="register-login-redirect">
                     <a href="/register">Don't have an account? Register for free.</a>
                 </div>
 
