--- a/sass/main.scss
+++ b/sass/main.scss
@@ -268,6 +268,7 @@ main {
     padding: 0 0 10px 0;
     margin: 0;
     font-family: $heading-font-stack;
+    text-align: center;
   }
 
   label {
