Styled edit profile and its error page

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -274,5 +274,30 @@ main {
   padding: 10px;
   text-align: center;
 }
+#account-box #edit-profile-button-container {
+  width: 180px;
+  margin: auto;
+}
+#account-box .submit-changes-button {
+  width: 100%;
+  margin: 20px 0;
+}
+#account-box #delete-button {
+  border: none;
+  background-color: #e84855;
+  color: #004e89;
+  padding: 10px 15px;
+  border-radius: 20px;
+  text-transform: uppercase;
+  padding: 10px 30px;
+  align-items: center;
+  width: 100%;
+  color: white;
+  margin-top: 10px;
+}
+#account-box #delete-button:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
 
 /*# sourceMappingURL=main.css.map */
