Series show page Episodes list styling in progress

--- a/views/shows/show.ejs
+++ b/views/shows/show.ejs
@@ -25,10 +25,11 @@
         </article>
 
         <article class="episode-list-container">
-            <h2>EPISODES</h2>
+        <h2 class="show-show-ep-title">EPISODES</h2>
             <div class="episode-list-grid">
                 <% for (let idx=0; idx < episodes.length; idx++) { %>
                     <% const episode=episodes[idx] %>
+                    div.e
                     <div class="episode-boxes">
                         <img class="thumbnail" src="<%= episode.image %>" alt="" />
                     </div>
